tests/paczka1/fuzzy1/87850459.err
Error in line 5: S141 A772 44,11
Error in line 14: 0HNrYKjf8A A644 52,2
Error in line 19: t8sm9hbj A772 75,4
Error in line 25: t8sm9hbj S141 4,0
